 * Corrected problems in the Visual Studio project files
 * Updated po files from the Translation Project
 * Added new en_GB.po, sk.po and vi.po translation files
 * ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
 * ogg123: fixed CPU issue when outputting to a closed pipe (#1357)
 * ogg123: return value to stop decoding after buffer is shut down (#1357)
 * oggenc: fixed a core dump while resampling from FLAC (#1316)
 * oggenc: fixed a typo in the Skeleton handling routine
 * oggenc: fixed remapping channels bug (#1326)
 * oggenc: support for WAVE_FORMAT_EXTENSIBLE headers (#1326)
 * oggenc: support for 32 bit WAV files (#1326)
 * oggenc: --ignorelength; support for WAV files > 4 GB (#1326)
 * ogginfo: support for information in Kate streams (#1360)
 * vcut: 64 bit fixes (#1366)
 * vorbiscomment: correct memory allocation (#472)

vorbis-tools 1.2.0 -- 2008-02-21

 * FLAC support now relies on libFLAC
 * Support for large files (#879)
 * Fixed acinclude.m4 to properly support --no switches
 * ogg123: added remote control support (#1109)
 * ogg123: fixed a bug in esd when pressing CTRL + C (#715)
 * ogg123: fixed a type mismatch in option parsing for 64 bit systems
 * ogg123: configuration no longer hardcoded to /etc
 * ogg123: compiles with older versions of libcurl
 * ogg123: fix crash when playing 1-channel FLAC (#535)
 * ogg123: fix floating-point exception when playing corrupt FLAC (#1119)
 * oggdec: limited support for chained Ogg bitstreams
 * oggdec: support decoding of multiple files into a single one
 * oggenc: -k, switch for Skeleton bitstream encoding
 * oggenc: fixed issues with Skeleton on big endian systems
 * oggenc: proper 5.1 channel mapping support
 * oggenc: FLAC module does not confuse every Ogg file as its own
 * oggenc: compiles with older versions of libvorbis
 * ogginfo: recognizes Skeleton, Dirac, FLAC and Kate bitstreams
 * vcut: solved issues described in ticket #1313